--- a/frontend/src/pages/Addbook.css
+++ b/frontend/src/pages/Addbook.css
@@ -147,4 +147,11 @@
     background-color: #3367d6;
   }
 
+  .loading-indicator {
+    text-align: center;
+    padding: 20px;
+    font-size: 18px;
+    color: #666;
+  }
+
   
