--- a/frontend/src/pages/BookDetails.css
+++ b/frontend/src/pages/BookDetails.css
@@ -214,7 +214,7 @@
 }
 
 .book-details-description {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     flex-grow: 1;
     overflow-y: auto;
     max-height: 200px;
@@ -371,6 +371,81 @@
     align-items: center;
 }
 
+/* Styles pour l'avatar */
+.publisher-link {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.publisher-link:hover {
+  text-decoration: underline;
+}
+
+.header-default-avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 8px;
+}
+
+.default-avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #FF5733;
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.publisher-info {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+
+.message-conv-avatar, .message-sender-avatar {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #FF5733;
+  color: white;
+  font-weight: bold;
+}
+
+/* Ajoutez ceci dans BookDetails.css */
+
+.publisher-info img.header-default-avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 8px;
+}
+
+.publisher-link {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  text-decoration: none;
+  color: inherit;
+}
+
+.publisher-link:hover {
+  text-decoration: underline;
+}
 
 
 .publisher-info a:hover {
